css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
/* INIZIO CONTAINER */
.container{
    width: 100%;
    height: 600px;
    background-color: white;
}

.d-flex{
    display: flex;
}

.align-center{
    align-items: center;
}

.justify-center{
    justify-content: center;
}
/* INIZIO CALCOLATRICE */
.calculator{
    width: 200px;
    background-color: lightgray;
    border-radius: 5px;
    flex-direction: column;
    flex-wrap: wrap;
}
/* INIZIO NOME */
.name{
    width: 100%;
    height: 70px;
    font-size: 20px;
}
/* FINE NOME */
/* INIZIO MONITOR */
.monitor{
    width: 100%;
    height: 70px;
    background-color: black;
    color: aquamarine;
    font-family: 'Seven Segment', sans-serif;
    font-size: 30px;
    padding-right: 15px;
}

.justify-end{
    justify-content: flex-end;
}
/* FINE MONITOR */
/* INIZIO ROW */
.action{
    margin: 10px;
}
/* INIZIO COLONNE */
.col-25{
    background-color: rgb(201, 201, 201);
    border: 1px solid gray;
    height: 30px;
    width: calc(100% / 4);
    margin: 5px;
}

.bg-orange{
    background-color: orange;
}

.bg-cyan{
    background-color: cyan;
}

.flex-basis{
    flex-basis: 50%;
}

.col-white{
    color: white;
}
/* FINE COLONNE */
/* FINE ROW */

